--- a/style.css
+++ b/style.css
@@ -4,3 +4,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+
+img {
+    display: block;
+    max-width: max-content;
+    margin: 0px auto;
+}
