--- a/style.css
+++ b/style.css
@@ -5,9 +5,55 @@
     box-sizing: border-box;
 }
 
+body {
+    background-image: url(assets/Gemini_Generated_Image_2peuf82peuf82peu\ \(1\).png);
+    
+    
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+}
 
 img {
     display: block;
-    max-width: max-content;
-    margin: 0px auto;
+    padding: 5px;
+    max-width: 150px;
+    margin: 1px auto;
 }
+
+h1 {
+    text-align: center;
+    margin: 5px 0;
+    font-size: 40px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: italic;
+}
+
+p {
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    justify-content: center;
+    margin: 15px 10px;
+    font-size: 25px; 
+}
+
+img.elenco2 {
+    max-width: 450px;
+    margin: 20px auto;
+    padding: 0px;
+    margin: 35px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+button {
+    display: block;
+    height: auto;
+    margin: 20px auto;
+    padding: 10px 30PX;
+    border-radius: 6px;
+    text-decoration: none;
+}
+
+
